--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,12 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <meta name="theme-color" content="#694be2" />
+
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto|Lato|Montserrat|Gadugi|Quicksand|Padauk|IBM+Plex+Sans" rel="stylesheet">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
